[package]
name = "clamor"
version = "0.1.0"
authors = ["John P Mayer Jr <john.p.mayer.jr@gmail.com>"]

[[bin]]
name = "clamor-bin"
path = "src/main.rs"

[lib]
name = "clamor"

[dependencies]
# alga = "0.5"
piston_window = "0.73.0"
kay = { git = "https://github.com/citybound/citybound" }
compact = { git = "https://github.com/citybound/citybound" }
compact_macros = { git = "https://github.com/citybound/citybound" }
nalgebra = "0.13.1"
vecmath = "0.3.1"
num = "0.1.40"
gfx = "0.16.0"
shader_version = "0.3.0"
camera_controllers = "0.23.0"
pistoncore-sdl2_window = "0.46.0"

[build-dependencies]
kay_codegen = { git = "https://github.com/citybound/citybound" }
